package br.com.archflow.model.ai.type;

/**
 * Define os tipos possíveis de componentes IA no archflow.
 */
public enum ComponentType {
    ASSISTANT,  // Componentes interativos
    AGENT,      // Componentes autônomos 
    PLUGIN,     // Funcionalidades reutilizáveis
    TOOL        // Ferramentas específicas
}