package br.com.archflow.plugin.api.type;

/**
 * Tipos de operações suportadas.
 */
public enum OperationType {
    SYNC,      // Operação síncrona
    ASYNC,     // Operação assíncrona
    STREAM     // Operação streaming
}