package br.com.archflow.plugin.api.type;

/**
 * Tipos de parâmetros suportados.
 */
public enum ParameterType {
    STRING,
    NUMBER,
    BOOLEAN,
    ENUM,
    OBJECT,
    ARRAY,
    FILE,
    SECRET
}